syntax = "proto3";

package users;

service Users {
	rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
	rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse) {}
}

message CreateUserRequest {
	string email = 2;
}

message CreateUserResponse {
	string message = 1;
	uint64 code = 2;
	string id = 3;
}

message GetAllUsersRequest {}

message GetAllUsersResponse {
	repeated User users = 1;
	uint64 code = 2;
}

message User {
	string id = 1;
	string email = 3;
}
